--- a/trunk/doc/man/man5/slurm.conf.5
+++ b/trunk/doc/man/man5/slurm.conf.5
@@ -63,12 +63,15 @@ node when a user's job completes (e.g. "/usr/local/slurm/epilog"). This may
 be used to purge files, disable user login, etc. By default there is no epilog.
 .TP
 \fBFastSchedule\fR
-If set to 1, then consider the configuration of each node to be that 
-specified in the configuration file. If set to 0, then base scheduling 
-decisions upon the actual configuration of each individual node. If the 
-number of node configuration entries in the configuration file is significantly 
-lower than the number of nodes, setting FastSchedule to 1 will permit 
-much faster scheduling decisions to be made. The default value is 1.
+If set to 1 (the default), then consider the configuration of each node 
+to be that specified in the configuration file. If set to 0, then base 
+scheduling decisions upon the actual configuration of each individual node. 
+If the number of node configuration entries in the configuration file 
+is significantly lower than the number of nodes, setting FastSchedule to 
+1 will permit much faster scheduling decisions to be made. 
+(The scheduler can just check the values in a few configuration records 
+instead of possibly thousands of node records. If a job can't be initiated 
+immediately, the scheduler may execute these tests repeatedly.)
 .TP
 \fBFirstJobId\fR
 The job id to be used for the first submitted to SLURM without a 
